updated to the latest mongodb driver